test/errors/structs/struct_missing_constructor_fail.hy
// EXPECT_DIAGNOSTIC: Struct 'MissingCtor' must declare at least one constructor
struct MissingCtor
{
    int value
}

// expect: Struct 'MissingCtor' must declare at least one constructor
